--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header" id="header">
   <svg class="header__logo">
     <use href="./images/icons-ice_cream.svg#icon-Logo"></use>
   </svg>
@@ -14,10 +14,10 @@
       </svg>
     </button>
     <nav class="header__nav">
-      <li class="header__nav-item">Home</li>
-      <li class="header__nav-item">How it&apos;s made?</li>
-      <li class="header__nav-item">Our products</li>
-      <li class="header__nav-item">Contact</li>
+      <li><a href="#header" class="header__nav-item">Home</a></li>
+      <li><a href="#about" class="header__nav-item">How it&apos;s made?</a></li>
+      <li><a href="#products" class="header__nav-item">Products</a></li>
+      <li><a class="header__nav-item">Contact</a></li>
     </nav>
     <button class="buy-now" data-modal-contact-open type="button">
       <span class="buy-now__text">Buy now</span>
@@ -51,9 +51,13 @@
     </button>
   </div>
   <ul class="menu-container__list">
-    <li><a class="menu-container__link">Home</a></li>
-    <li><a class="menu-container__link menu-container__link--accent">How it&apos;s made?</a></li>
-    <li><a class="menu-container__link">Our products</a></li>
+    <li><a href="#header" class="menu-container__link">Home</a></li>
+    <li>
+      <a href="#about" class="menu-container__link menu-container__link--accent"
+        >How it&apos;s made?</a
+      >
+    </li>
+    <li><a href="#products" class="menu-container__link">Our products</a></li>
     <li><a class="menu-container__link">Contact</a></li>
   </ul>
 
@@ -75,27 +79,33 @@
     </button>
     <h2 class="buy__tittle">Buy now</h2>
     <form class="buy__form">
-      <fieldset class="buy__radios">
-        <label class="buy__ice-cream">
-          <input type="radio" name="product" value="ice-cream" class="buy__radio" />
-          <div class="buy__picture"></div>
-          <p class="buy__paragraph">Ice cream</p>
+      <fieldset class="buy__checkboxes">
+        <label>
+          <input type="checkbox" name="product" value="ice-cream" class="buy__check" />
+          <div class="buy__ice-cream">
+            <div class="buy__picture buy__ice-cream-img"></div>
+            <p class="buy__paragraph">Ice cream</p>
+          </div>
         </label>
-        <label class="buy__ice-coffe">
-          <input type="radio" name="product" value="ice-coffe" class="buy__radio" />
-          <img href="./images/header/ice-cream-132.jpg" class="buy__picture" />
-          <p class="buy__paragraph">Ice coffe</p></label
-        >
-        <label class="buy__milkshake">
-          <input type="radio" name="product" value="milkshake" class="buy__radio" />
-          <img href="./images/header/ice-cream.jpg" class="buy__picture" />
-          <p class="buy__paragraph">Milkshake</p></label
-        >
+        <label>
+          <input type="checkbox" name="product" value="ice-coffe" class="buy__check" />
+          <div class="buy__ice-coffe">
+            <img href="./images/header/ice-cream-132.jpg" class="buy__picture buy__ice-coffe-img" />
+            <p class="buy__paragraph">Ice coffe</p>
+          </div>
+        </label>
+        <label>
+          <input type="checkbox" name="product" value="milkshake" class="buy__check" />
+          <div class="buy__milkshake">
+            <img href="./images/header/ice-cream.jpg" class="buy__picture buy__milkshake-img" />
+            <p class="buy__paragraph">Milkshake</p>
+          </div>
+        </label>
       </fieldset>
-      <label><input type="text" name="name" /></label>
-      <label><input type="text" name="phone" /></label>
-      <label><textarea></textarea></label>
-      <button type="submit">submit</button>
+      <label><input type="text" name="name" placeholder="Name" class="buy__input" /></label>
+      <label><input type="text" name="phone" placeholder="Phone" class="buy__input" /></label>
+      <label><textarea placeholder="Comment" class="buy__textarea"></textarea></label>
+      <button type="submit" class="buy__submit">Submit</button>
     </form>
   </div>
 </div>
