--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -3,39 +3,49 @@
     <h2 class="advantages-header">advantages</h2>
     <ul class="advantages-list">
       <li class="advantages-list_element">
-        <div class="advantages-icon">
-          <svg width="36" height="36">
-            <use href="./images/icons-ice_cream.svg#icon-cow"></use>
-          </svg>
-        </div>
-        <p class="advantages-list__number">721</p>
-        <p class="advantages-list__text">
-          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
-        </p>
-      </li>
-      <li class="advantages-list__element">
-        <div class="advantages-icon">
-          <svg width="36" height="36">
-            <use href="./images/icons-ice_cream.svg#icon-weight"></use>
-          </svg>
-        </div>
-        <p class="advantages-list__number">16kg</p>
-        <p class="advantages-list__text">
-          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
-        </p>
-      </li>
-      <li class="advantages-list__element">
-        <div class="advantages-icon">
-          <svg width="36" height="36">
-            <use href="./images/icons-ice_cream.svg#icon-ice-crema">
+        <figure>
+          <div class="advantages-icon">
+            <svg width="36" height="36">
+              <use href="./images/icons-ice_cream.svg#icon-cow"></use>
+            </svg>
+          </div>
+          <figcaption>
+            <p class="advantages-list__number">721</p>
+            <p class="advantages-list__text">
               Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
-            </use>
-          </svg>
-        </div>
-        <p class="advantages-list__number">84</p>
-        <p class="advantages-list__text">
-          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
-        </p>
+            </p>
+          </figcaption>
+        </figure>
+      </li>
+      <li class="advantages-list__element">
+        <figure>
+          <div class="advantages-icon">
+            <svg width="36" height="36">
+              <use href="./images/icons-ice_cream.svg#icon-weight"></use>
+            </svg>
+          </div>
+          <figcaption>
+            <p class="advantages-list__number">16kg</p>
+            <p class="advantages-list__text">
+              Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+            </p>
+          </figcaption>
+        </figure>
+      </li>
+      <li class="advantages-list__element">
+        <figure>
+          <div class="advantages-icon">
+            <svg width="36" height="36">
+              <use href="./images/icons-ice_cream.svg#icon-ice-crema"></use>
+            </svg>
+          </div>
+          <figcaption>
+            <p class="advantages-list__number">84</p>
+            <p class="advantages-list__text">
+              Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+            </p>
+          </figcaption>
+        </figure>
       </li>
     </ul>
   </div>
