--- a/src/sass/partials/_advantages.scss
+++ b/src/sass/partials/_advantages.scss
@@ -3,17 +3,22 @@ ul {
 }
 .advantages {
   background-color: #84a178;
+  color: #fcfcfc;
+  padding-top: 50px;
+  padding-bottom: 68px;
+  display: block;
 }
 .advantages-container {
-  width: 100%;
-  max-width: 480px;
-  margin: 0 auto;
-  padding: 0 15px;
+  max-width: calc(100vw - 40px);
+  margin: 0 auto 0;
   @include tablet {
-    max-width: 768px;
+    max-width: calc(100vw - 63px);
+    margin: 0 auto 0;
   }
   @include desktop {
-    max-width: 1200px;
+    max-width: 1168px;
+    margin: 0 auto 0;
+    padding: 0;
   }
 }
 .advantages-header:not(:focus):not(:active) {
@@ -28,7 +33,19 @@ ul {
 .advantages-list {
   display: flex;
   flex-direction: column;
-  flex-shrink: 0;
+  gap: 28px;
+  align-items: center;
+  @include tablet {
+    gap: 32px;
+    justify-content: space-between;
+    flex-direction: row;
+  }
+
+  @include desktop {
+    justify-content: space-between;
+    flex-direction: row;
+    gap: 32px;
+  }
 
   &__number {
     color: #fcfcfc;
@@ -40,6 +57,10 @@ ul {
     line-height: normal;
     letter-spacing: 1.44px;
     text-transform: uppercase;
+    font-size: 36px;
+    font-weight: bold;
+    margin-top: 22px;
+    margin-bottom: 16px;
     @include tablet {
       font-size: 48px;
       letter-spacing: 1.92px;
@@ -72,10 +93,12 @@ ul {
     align-items: center;
     gap: 16px;
     @include tablet {
+      display: flex;
       flex-direction: row;
       gap: 12px;
     }
     @include desktop {
+      display: flex;
       flex-direction: row;
       gap: 12px;
     }
@@ -83,6 +106,22 @@ ul {
 }
 
 .advantages-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border-radius: 25px;
   background-color: #f8d24e;
+  width: 50px;
+  height: 50px;
+  padding: 7px;
+  margin: 0 auto;
+}
+figure {
+  max-width: 230px;
+  margin: 0;
+
+  @include desktop {
+    max-width: 225px;
+    height: 368px;
+  }
 }
