--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,5 +1,5 @@
 <section class="contacts">
-  <div class="container contacts__wrapper">
+  <div class="container contacts__wrapper contacts__wrapper--moved">
     <ul class="contacts__list">
       <li class="contacts__item">
         <button class="contacts__header">cafe</button>
@@ -69,76 +69,28 @@
           <li><a class="contacts__link" href="tel:+61(0)383766284">+61(0) 383 766 284</a></li>
           <li><a class="contacts__link" href="mailto:noreply@envato.com">noreply@envato.com</a></li>
         </ul>
-
       </li>
     </ul>
-        </li>
-   </ul>
+<div class="contacts__buttons">
+    <button data-modal-open class="button-our-location " type="button">
+  Our location
+  <svg height="10px" width="6px">
+    <use href="./images/icons-ice_cream.svg#icon-arrow-right-bold"></use>
+  </svg>
+</button>
+<!-- <button class="button-our-location--disabled" type="button" disabled>
+  Our location
+  <svg height="10px" width="6px">
+    <use href="./images/icons-ice_cream.svg#icon-arrow-right-bold"></use>
+  </svg>
+</button> -->
 
-    <!-- <ul class="contacts-bts__list">
-    <li><button class="button">Our Locations ></button></li>
-    <li><button class="button">Franchise ></button></li>
-
-    </ul> -->
-<div class="container contacts__wrapper">
 
 
-<ul class="contacts-bts__list">
-    <li><button class="button">Our Locations ></button></li>
-    <li><button class="button">Franchise ></button></li>
-
-    </ul>
-
+<button data-modal-open class="button-franchise" type="button">Franchise</button>
+<!-- <button class="button-franchise--disabled" type="button" disabled>Franchise</button> -->
 </div>
 
-<div class="backdrop is-hidden" data-modal>
-  <div class="modalMap">
-    <h3 class="modalMap__header">Our Locations</h3>
-
-
-  </div>
-</div>
-
-
-<div class="backdrop is-hidden" data-modal>
-  <div class="modalSignup">
-    <button type="button" class="close-btn" data-modal-close>
-        <svg class="xclose" width="20px" height="20px">
-          <use href="./images/icons-ice_cream.svg#icon-icon-close"></use>
-        </svg>
-      </button>
-
-    <form class="modalSignup__form">
-    <h3 class="modalSignup__header">Thank you for your interest in owning an Ice Cream shop</h3>
-
-    <p class="modalSignup__text">Due to the overwhelming volume of franchise requests we are not accepting new franchisee applications at this time. Once the application process resumes, we will contact you for further information. Please fill out the contact information below and we will reach out for additional information. We appreciate your patience.</p>
-    <label class="modalSignup__label">
-        <input type="name" minlength="3" name="username" class="modalSignup__input" placeholder="Name" />
-    </label>
-
-    <label class="modalSignup__label">
-        <input type="tel" name="phone-number" placeholder="Phone" class="modalSignup__input"required/>
-    </label>
-
-    <label class="modalSignup__label">
-        <input type="email"
-              name="user-email"
-              class="modalSignup__input"
-              placeholder="Email"
-              required />
-    </label>
-
-    <label class="modalSignup__label">
-        <textarea
-        name="comment"
-        rows="3"
-        class="modalSignup__textarea"
-        placeholder="Comment"
-      ></textarea>
-    </label>    
-    </form>
-</div>
-</div>
     
   
 
