--- a/src/sass/partials/_gallery.scss
+++ b/src/sass/partials/_gallery.scss
@@ -1,6 +1,7 @@
 @import '../mixins';
 
 .container {
+  
   max-width: 380px;
   width: 100%;
   height: auto;
@@ -8,61 +9,54 @@
   padding: 0 15px;
   @include tablet {
     max-width: 768px;
-    height: auto;
   }
   @include desktop {
     max-width: 1200px;
-    height: auto;
-  }}
+  }  
+ }
 
 
 .gallery {
-  margin: 0 auto;  
-  background-image: url(../images/Backgroud_mobile@1x.jpg);  
+  background-image: url(../images/Backgroud_mobile@1x.jpg);
   background-position: center;
   background-size: cover;
-  background-repeat: repeat-y;  
-  padding-bottom: 300px;
-  max-width: 767px;
-  width: 100%;
+  background-repeat: no-repeat;
   height: auto;
-  display: flex;
-  justify-content: center;
-  
-    @include tablet {
-    min-width: 768px;
-    max-width: 1199px;    
-    background-size: cover;
-    background-position: 50% 50%;
-    padding-bottom: 350px;
-    background-image: url(../images/Background_tablet@1x.jpg); 
+  padding-bottom: 450px;
+  @media (min-device-pixel-ratio: 2),
+    (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: url(../images/Backgroud_mobile@2x.jpg);
+  }
+  @include tablet {
+    background-image: url(../images/Background_tablet@1x.jpg);
+    @media (min-device-pixel-ratio: 2),
+      (-webkit-min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url(../images/Background_tablet@2x.jpg);
     }
-    @include desktop {
-    background-size: cover;
-    min-width: 1200px;
-    max-width: 1600px;
-    background-position: 50% 50%;
-    padding-bottom: 450px;
+  }
+  @include desktop {
     background-image: url(../images/Backgroud_desktop@1x.jpg);
+    @media (min-device-pixel-ratio: 2),
+      (-webkit-min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url(../images/Backgroud_desktop@2x.jpg);
     }
+  }
 }
-
-@media (min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
-  .gallery {
-    background-image: url("../images/Backgroud_mobile@2x.jpg");
-  }
-  }
 
   .loop {
 --time: 8s;
 display: grid;
 margin: 0 auto;
-margin-bottom: 80px;
-padding-bottom: 140px;
-place-items: center;
+padding-bottom: 80px;
+justify-items: center;
 place-content: center;
+
       
       &__image {        
       padding-left: 20px;
@@ -70,27 +64,25 @@ place-content: center;
       border-radius: 8px;
       border: hidden;
       margin: 0 auto;
-      margin-top:-26px;   
-      position:absolute;
-      display: block;
+      margin-top:-39px;  
       width: 100%;
       height: auto;
+      min-width: 380px;
+      max-width: 767px;
+      padding-bottom: 119px;
   
       
     @include tablet {
     min-width: 768px;
     max-width: 1199px;       
-    margin-top:-16px;    
-    margin-bottom: 80px;      
-    position:absolute;
+    margin-top:-80px;    
+    padding-bottom: 80px;    
     }
 
     @include desktop {
-    min-width: 1200px;
-    max-width: 1600px;
-    margin-top:-16px;    
-    margin-bottom: 240px;    
-    position:absolute;      
+    min-width: 1200px;    
+    margin-top:-127px;
+        
     
     }
   }
@@ -126,53 +118,44 @@ place-content: center;
 .swiper {
   display: flex;
   flex-direction: column;
-  justify-content: center;  
-height: 100%;
+  justify-content: center;
   margin: 0 auto;
   max-width: 600px;
   max-height: 300px;
+  
 
     @include tablet 
     { max-width: 705px;
     height: auto;
     margin: 0 auto;
-    padding-top: 80px;}
+    }
 
     @include desktop 
     {max-width: 968px;
     height: auto;
     margin: 0 auto;
-    padding-top: 140px;}
+    }
 
   &-pagination {
     width: 72px;
-    padding-top: 532px;
-    padding-bottom: 112px;
-    height: 100%;
-
+    
     &-bullet {
       width: 12px;
       height: 12px;
-      padding-top: 12px;
-      height: 100%;
     }
 
     &-bullet-active {
       background-color: #84a178;
-      padding-top: 12px;
-      padding-bottom: 12px;
-      height: 100%;
     }
   }
-  &__slide {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin: 0;
-  padding-bottom: 12px;
-  height: 100%;
-  }
-   
+  //
+  //&__slide {
+  //display: flex;
+  //flex-direction: column;
+  //justify-content: center;
+  //margin: 0;
+  //padding-bottom: 12px;
+  //}
 }
 
 .review {
@@ -180,16 +163,16 @@ height: 100%;
   justify-content: center;  
   padding-top: 32px;
   padding-bottom: 12px;
-  height: 100%;
+  
+  
 
-   &__list {
-   list-style: none;
-  padding: 0;
-  justify-content: center;
-  width: 280px;
-  padding-bottom: 12px;
-  height: 100%;
-  }
+  // &__list {
+  // list-style: none;
+  //padding: 0;
+  //justify-content: center;
+  //width: 280px;
+  //padding-bottom: 12px;
+    //}
 
   &__pic {
     display: flex;
@@ -219,8 +202,9 @@ height: 100%;
     font-weight: 400;
     letter-spacing: 0.04em;
     line-height: 2.25em;
-    margin-right: 15px;
-    margin-left: 15px;
+
+    //margin-right: 15px;
+    //margin-left: 15px;
     
 
     @include tablet {
@@ -238,10 +222,10 @@ height: 100%;
     @include desktop {
       font-size: 16px;
       letter-spacing: 0.64px;
-      padding-bottom: 43px;
-      padding-top: 43px;
-      padding-right: 109px;
-      padding-left: 109px;
+      //padding-bottom: 43px;
+      //padding-top: 43px;
+      //padding-right: 109px;
+      //padding-left: 109px;
       border-radius: 24px;
       width: 968px;
       margin: auto;
