--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -165,6 +165,8 @@
     height: 34px;
     padding-left: 6px;
     padding-top: 6px;
+    padding-right: 6px;
+    padding-bottom: 6px;
     border-radius: 25%;
 
     &:hover,
