--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,8 +2,8 @@
   <div class="container">
     <div class="footer__container">
       <div class="footer__title">
-        <p>homemade ice cream made</p>
-        <p>with passion</p>
+        <p class="footer__label" homemade ice cream made></p>
+        <p class="footer__heading" with passion></p>
       </div>
       <div class="footer__social">
         <ul class="footer__social-list">
