--- a/src/sass/partials/_header.scss
+++ b/src/sass/partials/_header.scss
@@ -134,13 +134,10 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   z-index: 998;
   background-color: $firstBrandColor;
-
-  transform: translateX(100%);
-  transition: transform 250ms ease-in-out;
 
   &__header {
     padding: 12px 20px 51px 32px;
@@ -241,10 +238,6 @@
     width: 12px;
     height: 12px;
   }
-}
-
-.menu-container.is-open {
-  transform: translateX(0);
 }
 
 .menu-toggle {
