--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -173,7 +173,7 @@
       margin-bottom: 12px;
       flex-wrap: wrap;
     }
-    &::after {
+    &__line {
       content: '';
       display: block;
       background-color: #e1e1e1;
