--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -149,14 +149,11 @@
     text-align: right;
     font-size: 12px;
 
-    ::after {
-      content: '';
-      display: block;
-      background-color: #e1e1e1;
-      stroke-width: 1px;
-      transform: translate(-50%);
-      height: 1px;
-      width: 480x;
+    &__line {
+      border: 0.4 solid #e1e1e1;
+      text-align: left;
+      margin-bottom: 24px;
+      width: 100%;
     }
   }
   &__contact-link {
